HERB-55 Fix unreadable Add button label text

--- a/custom/themes/0_unbherbarium_ca/src/scss/style.scss
+++ b/custom/themes/0_unbherbarium_ca/src/scss/style.scss
@@ -210,7 +210,6 @@ select[data-drupal-selector="edit-collector"] + .form-control {
 
 a:link,
 a:visited{
-  color: $color-link;
   text-decoration: none;
 }
 a:focus,
